--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/checkbox": "^2.1.5",
     "@nextui-org/modal": "^2.0.41",
+    "@nextui-org/pagination": "^2.0.36",
+    "@nextui-org/react": "^2.4.8",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
-    "framer-motion": "^11.11.17",
+    "@nextui-org/user": "^2.0.34",
+    "framer-motion": "^11.12.0",
     "next": "15.0.3",
     "react": "^18",
     "react-dom": "^18",
