--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/checkbox": "^2.1.5",
+    "@nextui-org/input": "^2.2.5",
     "@nextui-org/modal": "^2.0.41",
     "@nextui-org/pagination": "^2.0.36",
     "@nextui-org/react": "^2.4.8",
